--- a/chicken.html
+++ b/chicken.html
@@ -82,19 +82,19 @@
 		<h2>Our Team</h2>
 		<div class="team-container">
 		  <div class="team-member">
-			<img src="/images/sew.jpg" alt="Team Member 1">
+			<img src="/images/IMG_20221018_174112_9-removebg-preview.png" alt="Team Member 1">
+			<h3>Serah Mburu</h3>
+			<p>CEO mburusfarm</p>
+		  </div>
+		  <div class="team-member">
+			<img src="/images/IMG-20210713-WA0006-removebg-preview.png" alt="Team Member 2">
+			<h3>Julie Mburu</h3>
+			<p>CFO mburusfarm</p>
+		  </div>
+		  <div class="team-member">
+			<img src="/images/IMG_20200608_165600_9-removebg-preview.png">
 			<h3>Liz Mburu</h3>
-			<p>CEO</p>
-		  </div>
-		  <div class="team-member">
-			<img src="/images/doe.jpg" alt="Team Member 2">
-			<h3>Julie</h3>
-			<p>CFO</p>
-		  </div>
-		  <div class="team-member">
-			<img src="/images/doe.jpg" alt="Team Member 3">
-			<h3>Margret Mburu</h3>
-			<p>CTO</p>
+			<p>CTO mburusfarm</p>
 		  </div>
 		</div>
 	  </section>
