--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
             <h3>Broilers</h3>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="/images/eggs-removebg-preview.png" alt="Broiler Eggs">
+                    <img src="/images/eggg.jpg" alt="Broiler Eggs">
                     <h4>Eggs</h4>
                     <p>$2.99/dozen</p>
                     <a href="pay.html"> <button class="btn">Place order</button></a>
                    
                 </div>
                 <div class="product-item">
-                    <img src="/images/chic.jpeg" alt="Broiler Chicks">
+                    <img src="/images/nkm.jpg" alt="Broiler Chicks">
                     <h4>Broiler Chicks</h4>
                     <p>$1.99 each</p>
                     <a href="order.html"></a><button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/bch-removebg-preview.png" alt="Broiler Raw Meat">
+                    <img src="/images/kuk.jpeg" alt="Broiler Raw Meat">
                     <h4>Raw Meat</h4>
                     <p>$5.99/lb</p>
                     <a href="order.html"></a><button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/br-removebg-preview.png" alt="Broiler Cooked Meat">
+                    <img src="/images/jogoo-removebg-preview.png" alt="Broiler Cooked Meat">
                     <h4>Broiler hen</h4>
                     <p>$8.99/lb</p>
                     <button class="btn">Place order</button>
@@ -92,19 +92,19 @@
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/chickks-removebg-preview.png" alt="Kienyeji Chicks">
+                    <img src="/images/lpl.jpg" alt="Kienyeji Chicks">
                     <h4>Kienyeji Chicks</h4>
                     <p>$2.99 each</p>
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/raw-removebg-preview.png" alt="Kienyeji Raw Meat">
+                    <img src="/images/heen.jpeg" alt="Kienyeji Raw Meat">
                     <h4>Raw Meat</h4>
                     <p>$6.99/lb</p>
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/egg1-removebg-preview.png" alt="Kienyeji Cooked Meat">
+                    <img src="/images/jogoo-removebg-preview.png" alt="Kienyeji Cooked Meat">
                     <h4>Kienyeji eggs</h4>
                     <p>$9.99/lb</p>
                     <button class="btn">Place order</button>
@@ -115,26 +115,26 @@
             <h3>Layers</h3>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="/images/jogoo-removebg-preview.png" alt="Layer Eggs">
+                    <img src="/images/eggg.jpg" alt="Layer Eggs">
                     <h4>Eggs</h4>
                     <p>$4.99/dozen</p>
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/threec-removebg-preview.png" alt="Layer Chicks">
+                    <img src="/images/nkm.jpg" alt="Layer Chicks">
                     <h4>Chicks</h4>
                     <p>$3.99 each</p>
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/nyama-removebg-preview.png" alt="Layer Raw Meat">
+                    <img src="/images/raw-removebg-preview.png" alt="Layer Raw Meat">
                     <h4>Raw Meat</h4>
                     <p>$7.99/lb</p>
                     <button class="btn">Place order</button>
                 </div>
                 <div class="product-item">
-                    <img src="/images/egg2-removebg-preview.png" alt="Layer Cooked Meat">
-                    <h4>Cooked Meat</h4>
+                    <img src="/images/eggg.jpg" alt="Layer Cooked Meat">
+                    <h4>eggs</h4>
                     <p>$10.99/lb</p>
                     <button class="btn">Place order</button>
                 </div>
